@@ -98,6 +98,8 @@ Current Bugs to Fix
 
 Changes up to 0.88
 
+   * debugged and tested Quadro hardware support
+
    * Added mouse_scale and mouse_limit settings.  Reduced "jumping" of virtual trackball.
 
    * Worked to resolve threading issues with multiple demanding
